[package]
name = "rust-roche"
version = "0.4.2"
edition = "2024"
description = "Rust translation of Tom Marsh's cpp-roche package for modelling Roche distorted stars/binary systems."
license = "MIT"

[lib]
name = "roche"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16.1"
bulirsch = "0.1.12"

[dependencies.pyo3]
version = "0.28.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["extension-module", "abi3-py38"]
